[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
color-eyre = "0.6.5"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
postcard = { version = "1.1.3", features = ["alloc"] }

protocol = { path = "../protocol/" }
world = { path = "../world/" }

